@@ -5,33 +5,35 @@ import bitcamp.myapp.service.BoardService;
 import bitcamp.myapp.service.MemberService;
 import bitcamp.myapp.service.MyPageService;
 import bitcamp.myapp.service.NcpObjectStorageService;
+import bitcamp.myapp.service.RedisService;
 import bitcamp.myapp.vo.LoginUser;
 import bitcamp.myapp.vo.Member;
 import bitcamp.myapp.vo.MyPage;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import java.io.IOException;
 import java.net.URLEncoder;
-import java.sql.Timestamp;
-import java.text.SimpleDateFormat;
-import java.util.Date;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
+import java.util.List;
+import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.CookieValue;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
-@Controller
+@RestController
 @RequestMapping("/myPage")
 public class MyPageController {
 
@@ -50,67 +52,38 @@ public class MyPageController {
   @Autowired
   NcpObjectStorageService ncpObjectStorageService;
 
+  @Autowired
+  RedisService redisService;
+
   {
     System.out.println("MyPageController 생성됨!");
   }
 
   @GetMapping("{no}")
-  public String detail(
+  public ResponseEntity detail(
       @PathVariable int no,
-      @RequestParam(defaultValue = "") String show,
-      @RequestParam(name = "keyword", required = false) String keyword,
       @RequestParam(defaultValue = "1") int page,
       @RequestParam(defaultValue = "6") int pageSize,
       Model model,
       HttpSession session,
       @ModelAttribute("queryString") String queryString) throws Exception {
-    LoginUser loginUser = (LoginUser) session.getAttribute("loginUser");
-    if (loginUser == null) {
-      return "redirect:/auth/form";
-    }
 
     // 세션에 저장된 방문한 마이페이지 번호 목록을 가져오기
-    HashSet<Integer> visitedMyPages = loginUser.getVisitedMyPages();
+//    HashSet<Integer> visitedMyPages = loginUser.getVisitedMyPages();
 
     // 만약 방문한 적 없는 마이페이지라면 조회수 증가
-    if (!visitedMyPages.contains(no) && loginUser.getNo() != no) {
-      myPageService.increaseVisitCount(no);
+//    if (!visitedMyPages.contains(no) && loginUser.getNo() != no) {
+//      myPageService.increaseVisitCount(no);
+//
+//      // 방문한 마이페이지 번호를 세션에 추가
+//      visitedMyPages.add(no);
+//    }
 
-      // 방문한 마이페이지 번호를 세션에 추가
-      visitedMyPages.add(no);
-    }
+    HashMap<String, Object> returnMap = new HashMap<>();
+    returnMap.put("myBoardList", boardService.myboardlist(1, no, pageSize, 1));
+    returnMap.put("myCommentList", boardCommentService.mycommentlist(no, pageSize, 1));
 
-    model.addAttribute("myPage", myPageService.get(no));
-    model.addAttribute("show", show);
-    model.addAttribute("page", page);
-
-    switch (show) {
-      case "followers":
-        model.addAttribute("followList", myPageService.followerList(no));
-        model.addAttribute("maxPage",
-            (myPageService.getFollowerCount(no) + pageSize - 1) / pageSize);
-        break;
-      case "followings":
-        model.addAttribute("followList", myPageService.followingList(no));
-        model.addAttribute("maxPage",
-            (myPageService.getFollowingCount(no) + pageSize - 1) / pageSize);
-        break;
-      case "searchMembers":
-        model.addAttribute("keyword", keyword);
-        model.addAttribute("followList", myPageService.searchMembersList(keyword, pageSize, page));
-        model.addAttribute("maxPage",
-            (myPageService.getSearchMembersCount(keyword) + pageSize - 1) / pageSize);
-        break;
-      default:
-        model.addAttribute("followList", null);
-        model.addAttribute("boardList", boardService.list(1, pageSize, 1));
-        model.addAttribute("myboardList",
-            boardService.myboardlist(1, no, pageSize, 1));
-        model.addAttribute("mycommentList", boardCommentService.mycommentlist(no, pageSize, 1));
-        break;
-    }
-    session.setAttribute("loginUser", loginUser);
-    return "myPage/detail";
+    return new ResponseEntity<>(returnMap, HttpStatus.OK);
   }
 
   @PostMapping("{no}")
@@ -119,14 +92,14 @@ public class MyPageController {
       @RequestParam(defaultValue = "") String show,
       @RequestParam("keyword") String keyword,
       @RequestParam(defaultValue = "1") int page) throws Exception {
-    String encodedKeyword = URLEncoder.encode(keyword, "UTF-8");
+    String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
     String queryString = String.format("?show=%s&keyword=%s&page=%d", show, encodedKeyword, page);
 
     return "redirect:/myPage/" + no + queryString;
   }
 
   @GetMapping("{no}/info")
-  public String info(
+  public ResponseEntity<MyPage> info(
       @PathVariable int no,
       Model model,
       HttpServletRequest request,
@@ -139,73 +112,62 @@ public class MyPageController {
     if (request != null) {
       model.addAttribute("request", request);
     } else {
-      return "redirect:/";
+      return new ResponseEntity<>(myPage, HttpStatus.OK);
     }
 
-    return "myPage/memberInfoUpdate";
+    return new ResponseEntity<>(myPage, HttpStatus.OK);
   }
 
   @PostMapping("{no}/update")
-  public String update(
-      Member member,
+  public ResponseEntity update(
+      @RequestPart("data") MyPage myPage,
       @PathVariable int no,
-      @RequestParam("birthday") String birthday,
-      @RequestParam("gender") int gender,
-      @RequestParam("stateMessage") String stateMessage,
-      Model model,
-      MultipartFile photofile,
-      HttpSession session) throws Exception {
-    member.setPhoneNumber(member.getPhoneNumber().replaceAll("\\D+", ""));
+      @RequestPart(value = "files", required = false) MultipartFile[] files,
+      @CookieValue(value = "sessionId", required = false) Cookie sessionCookie)
+      throws Exception {
+    Member member = myPage;
 
-    LoginUser loginUser = (LoginUser) session.getAttribute("loginUser");
-    MyPage myPage = myPageService.get(member.getNo());
+    LoginUser loginUser = null;
+    try {
+      String sessionId = sessionCookie.getValue();
+      String temp = (String) redisService.getValueOps().get(sessionId);
+      if (temp != null) {
+        int loginUserNo = Integer.parseInt(temp);
+        loginUser = new LoginUser(memberService.get(loginUserNo));
 
-    if (loginUser.getNo() == myPage.getNo()) {
-        if (photofile.getSize() > 0) {
-          String uploadFileUrl = ncpObjectStorageService.uploadFile(
-                  "bitcamp-nc7-bucket-14", "sns_member/", photofile);
-          member.setPhoto(uploadFileUrl);
-        }
-
-        myPage.setGender(gender);
-        myPage.setStateMessage(stateMessage);
-        // myPage.setEmail(email);
-        if (birthday.isEmpty()) {
-          birthday = null;
-        } else {
-          // 생일 값을 문자열에서 Timestamp로 변환
-          SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-          Date parsedDate = dateFormat.parse(birthday);
-          Timestamp timestamp = new Timestamp(parsedDate.getTime());
-
-          myPage.setBirthday(timestamp);
-
-        }
-
-        if (member.getEmail().equals(" ") || member.getEmail().isEmpty()) {
-          member.setEmail(null);
-        }
-
-      if (memberService.update(member) == 0 || myPageService.update(myPage) == 0) {
-        throw new Exception("회원이 없습니다.");
-      } else {
-        // 사용자 정보 업데이트 후, 세션에 새 정보를 설정
-        loginUser.setName(member.getName()); // 사용자 이름 업데이트
-        loginUser.setNick(member.getNick()); // 사용자 닉네임 업데이트
-        if (!photofile.isEmpty()) {
-          loginUser.setPhoto(member.getPhoto()); // 사용자 사진 업데이트
-        }
-
-        // 세션에 업데이트된 loginUser 속성을 다시 설정
-        session.setAttribute("loginUser", loginUser);
-
-        return "redirect:/myPage/" + myPage.getNo();
+      } else { // 해당하는 유저가 없을 경우
+        return new ResponseEntity<>(null, HttpStatus.BAD_REQUEST);
       }
-
-    } else {
-      return "redirect:/error";
+    } catch (Exception e) {
+      e.printStackTrace();
+      // 예외 발생 시 처리
+      return new ResponseEntity<>(e, HttpStatus.BAD_REQUEST);
     }
 
+    member.setPhoneNumber(member.getPhoneNumber().replaceAll("\\D+", ""));
+    if (files != null) {
+      if (files[0].getSize() > 0) {
+        String uploadFileUrl = ncpObjectStorageService.uploadFile(
+            "bitcamp-nc7-bucket-14", "sns_member/", files[0]);
+        member.setPhoto(uploadFileUrl);
+      }
+    }
+
+    if (member.getEmail() == null || member.getEmail().equals(" ") || member.getEmail().isEmpty()) {
+      member.setEmail(null);
+    }
+
+    if (memberService.update(member) == 0 || myPageService.update(myPage) == 0) {
+      return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+    } else {
+      memberService.update(member);
+      // 사용자 정보 업데이트 후, 세션에 새 정보를 설정
+      loginUser.setName(member.getName()); // 사용자 이름 업데이트
+      loginUser.setNick(member.getNick()); // 사용자 닉네임 업데이트
+      loginUser.setPhoto(member.getPhoto()); // 사용자 사진 업데이트
+
+      return new ResponseEntity<>(myPageService.get(myPage.getNo()), HttpStatus.OK);
+    }
   }
 
   @GetMapping("{no}/update")
@@ -243,56 +205,91 @@ public class MyPageController {
   }
 
   @GetMapping("follow")
-  public void follow(
+  public ResponseEntity follow(
       @RequestParam("followingNo") int followingNo,
-      HttpSession session,
+      @CookieValue("sessionId") Cookie sessionCookie,
       HttpServletResponse response) throws Exception {
-    LoginUser loginUser = (LoginUser) session.getAttribute("loginUser");
 
-    Map<String, Object> returnMap = new HashMap<>();
     try {
+      String sessionId = sessionCookie.getValue();
+      int loginUserNo = Integer.parseInt((String) redisService.getValueOps().get(sessionId));
+      Member loginUser = memberService.get(loginUserNo);
+
       int result = myPageService.follow(loginUser, followingNo);
-      loginUser.getFollowMemberSet().add(memberService.get(followingNo));
-      session.setAttribute("loginUser", loginUser);
-      returnMap.put("result", "success");
-
     } catch (Exception e) {
-      returnMap.put("result", "fail");
-
-    } finally {
-      try {
-        response.getWriter().print(new ObjectMapper().writeValueAsString(returnMap));
-      } catch (IOException ioException) {
-        ioException.printStackTrace();
-      }
+      e.printStackTrace();
+      return new ResponseEntity<>(followingNo, HttpStatus.BAD_REQUEST);
     }
-
+    return new ResponseEntity<>(followingNo, HttpStatus.OK);
   }
 
   @GetMapping("unfollow")
-  public void unfollow(
+  public ResponseEntity unfollow(
       @RequestParam("followingNo") int followingNo,
-      HttpSession session,
+      @CookieValue("sessionId") Cookie sessionCookie,
       HttpServletResponse response) throws Exception {
-    LoginUser loginUser = (LoginUser) session.getAttribute("loginUser");
 
-    Map<String, Object> returnMap = new HashMap<>();
     try {
+      String sessionId = sessionCookie.getValue();
+      int loginUserNo = Integer.parseInt((String) redisService.getValueOps().get(sessionId));
+      Member loginUser = memberService.get(loginUserNo);
+
       int result = myPageService.unfollow(loginUser, followingNo);
-      loginUser.getFollowMemberSet().remove(memberService.get(followingNo));
-      session.setAttribute("loginUser", loginUser);
-      returnMap.put("result", "success");
 
     } catch (Exception e) {
-      returnMap.put("result", "fail");
+      e.printStackTrace();
+      return new ResponseEntity<>(followingNo, HttpStatus.BAD_REQUEST);
 
-    } finally {
-      try {
-        response.getWriter().print(new ObjectMapper().writeValueAsString(returnMap));
-      } catch (IOException ioException) {
-        ioException.printStackTrace();
-      }
     }
+    return new ResponseEntity<>(followingNo, HttpStatus.OK);
+  }
+
+  @GetMapping("/{no}/followers")
+  @ResponseBody
+  public ResponseEntity getFollowerList(@PathVariable int no) {
+    List<Member> followerList;
+    try {
+      followerList = myPageService.followerList(no); // followerList를 가져오는 서비스 메서드 호출
+    } catch (Exception e) {
+      e.printStackTrace();
+      // 예외 발생 시 처리
+      return new ResponseEntity<>(e, HttpStatus.BAD_REQUEST);
+    }
+    return new ResponseEntity<>(followerList, HttpStatus.OK);
+
+  }
+
+  @GetMapping("/{no}/following")
+  @ResponseBody
+  public ResponseEntity getFollowingList(@PathVariable int no) {
+    List<Member> followingList;
+    try {
+      followingList = myPageService.followingList(no);
+    } catch (Exception e) {
+      e.printStackTrace();
+      // 예외 발생 시 처리
+      return new ResponseEntity<>(e, HttpStatus.BAD_REQUEST);
+    }
+    return new ResponseEntity<>(followingList, HttpStatus.OK);
+  }
+
+
+  @GetMapping("/searchMembers")
+  @ResponseBody
+  public ResponseEntity searchMembers(
+      @RequestParam(name = "searchTxt") String keyword,
+      @RequestParam(defaultValue = "1") int page,
+      @RequestParam(defaultValue = "6") int pageSize) {
+    List<Member> resultList;
+//    String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8);
+    try {
+      resultList = myPageService.searchMembersList(keyword, pageSize, page);
+    } catch (Exception e) {
+      e.printStackTrace();
+      // 예외 발생 시 처리
+      return new ResponseEntity<>(e, HttpStatus.BAD_REQUEST);
+    }
+    return new ResponseEntity<>(resultList, HttpStatus.OK);
   }
 
 }
